# polkadot_drypto

./: .gitignore  README.md  polkadot_drypto_qa_report.md  tsconfig.json
contracts/ink/my_contract/: Cargo.toml
contracts/ink/my_contract_old/: Cargo.toml
contracts/ink/my_contract_old/minimal_ink_test/: Cargo.toml  lib.rs
contracts/ink/my_contract_old/src/: lib.rs
contracts/solidity/: MyContract.sol
scripts/: deploy_ink.ts
